examples/tests/valid/while.w
while false {
  let x = 1;
}

let y = 123;
while y < 0 {
  let x = 1;
}

let var z = 0;
while true {
  z = z + 1;
  if (z > 2) {
    break;
  }
}

while true {
  break;
}
